# rust-tiktoken

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
tiktoken/: CHANGELOG.md  Cargo.toml  LICENSE-3RD-PARTY  README.ja.md  README.md  README.zh-CN.md
tiktoken-wasm/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
tiktoken-wasm/src/: lib.rs
tiktoken/benches/: bench_python.py  tokenize.rs
tiktoken/examples/: basic.rs  cost_estimation.rs  count_tokens.rs
tiktoken/examples/react-app/: README.md  package.json  vite.config.ts
tiktoken/examples/react-app/src/: App.tsx
tiktoken/src/: bpe.rs  encoding.rs  lib.rs  merge.rs  pretokenize.rs  pricing.rs  vocab.rs
tiktoken/src/encodings/: cl100k_base.tiktoken.zst  deepseek_v3.tiktoken.zst  mistral_v3.tiktoken.zst  o200k_base.tiktoken.zst  p50k_base.tiktoken.zst  qwen2.tiktoken.zst  r50k_base.tiktoken.zst
tiktoken/tests/: edge_cases.rs  generate_oracle.rs  oracle.rs  oracle_hf.rs  parallel.rs  proptest.proptest-regressions  proptest.rs
tiktoken/tests/fixtures/: cl100k_base.json  deepseek_v3.json  llama3.json  mistral_v3.json  o200k_base.json  p50k_base.json  qwen2.json  r50k_base.json
