[package]
name = "tiktoken-wasm"
version = "3.1.0"
edition = "2024"
description = "WASM bindings for the tiktoken BPE tokenizer"
license = "MIT"
repository = "https://github.com/goliajp/airs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tiktoken = { path = "../tiktoken" }
wasm-bindgen = "^0.2"
serde = { version = "^1", features = ["derive"] }
serde-wasm-bindgen = "^0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
