[package]
name = "tiktoken-wasm"
version = "3.2.3"
edition = "2024"
description = "WASM bindings for the tiktoken BPE tokenizer"
license = "MIT"
repository = "https://github.com/goliajp/rust-tiktoken"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tiktoken = { path = "../tiktoken", version = "3.1.3" }
wasm-bindgen = "^0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"
