[package]
name = "tiktoken"
description = "A high-performance pure-Rust implementation of OpenAI's tiktoken BPE tokenizer"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tiktoken"
version = "2.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["tiktoken", "tokenizer", "bpe", "openai", "gpt"]
categories = ["text-processing", "algorithms"]

[dependencies]
base64 = "^0.22"
regex = "^1"
rustc-hash = "^2"

[dev-dependencies]
criterion = { version = "^0.8", features = ["html_reports"] }

[[bench]]
name = "tokenize"
harness = false
